[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UI/LobbySettings.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/IntegerLineEdit.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=7]

[sub_resource type="Theme" id=1]
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_accel = Color( 0, 0, 0, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0, 0, 0, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_separator = Color( 0, 0, 0, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource( 3 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = ExtResource( 6 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = ExtResource( 7 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = ExtResource( 5 )

[node name="LobbySettings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseDisable" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -1024.0
margin_right = 984.0
margin_bottom = 984.0
rect_min_size = Vector2( 2048, 2048 )
color = Color( 0.313726, 0.0509804, 0.698039, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNum" type="Label" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Players: "
align = 1
valign = 1

[node name="GameTypeHbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 250.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="VBoxContainer/GameTypeHbox"]
margin_top = 2.0
margin_right = 108.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Type: "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/GameTypeHbox"]
margin_left = 112.0
margin_right = 130.0
margin_bottom = 23.0
theme = SubResource( 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )

[node name="MatchTypeHbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 250.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="VBoxContainer/MatchTypeHbox"]
margin_top = 2.0
margin_right = 118.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Match Type: "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/MatchTypeHbox"]
margin_left = 122.0
margin_right = 140.0
margin_bottom = 23.0
theme = SubResource( 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )

[node name="DraftTypeHbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 250.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="VBoxContainer/DraftTypeHbox"]
margin_top = 2.0
margin_right = 112.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Draft Type: "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/DraftTypeHbox"]
margin_left = 116.0
margin_right = 134.0
margin_bottom = 23.0
theme = SubResource( 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )

[node name="PacksHbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 250.0
margin_bottom = 143.0

[node name="Label" type="Label" parent="VBoxContainer/PacksHbox"]
margin_top = 2.0
margin_right = 170.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Number of Packs: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PacksHbox"]
margin_left = 174.0
margin_right = 250.0
margin_bottom = 23.0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
script = ExtResource( 2 )

[node name="GPMHbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 250.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="VBoxContainer/GPMHbox"]
margin_top = 2.0
margin_right = 167.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Games Per Match: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/GPMHbox"]
margin_left = 171.0
margin_right = 247.0
margin_bottom = 23.0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
script = ExtResource( 2 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 250.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 32 )

[node name="Button" type="Button" parent="VBoxContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -10.0
margin_right = 52.0
margin_bottom = 10.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="VBoxContainer/GameTypeHbox/OptionButton" to="." method="onGameTypeSelected"]
[connection signal="item_selected" from="VBoxContainer/MatchTypeHbox/OptionButton" to="." method="onMatchTypeSelected"]
[connection signal="item_selected" from="VBoxContainer/DraftTypeHbox/OptionButton" to="." method="onDraftTypeSelected"]
[connection signal="text_changed" from="VBoxContainer/PacksHbox/LineEdit" to="VBoxContainer/PacksHbox/LineEdit" method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GPMHbox/LineEdit" to="VBoxContainer/GPMHbox/LineEdit" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/Control/Button" to="." method="onBackPressed"]
